# BugBuster

./: .gitignore
backend/: input_code.py  pyproject.toml  test.py  test2.py
backend/app/: database.db  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: __init__.py  challenges.py  solutions.py  users.py
backend/app/core/: config.py
backend/app/core/challenge_validation/: template.py
backend/app/core/database/: abstract_database.py  database.py
backend/app/core/reused_types/: __init__.py  pydantic_types.py  sqlalchemy_types.py
backend/app/models/: __init__.py  abstract_model.py  challenge_model.py  challenge_tag_model.py  solution_model.py  tag_model.py  user_model.py
backend/app/repositories/: __init__.py  challenges_repository.py  solutions_repository.py  users_repository.py
backend/app/schemas/: __init__.py  challenges.py  solutions.py  users.py
frontend/: bs-config.json  package-lock.json  package.json
